--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.44.2",
+    "@supabase/supabase-js": "^2.44.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
@@ -26,7 +26,11 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "chai": "^5.1.1",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.4"
-  }
+    "mocha": "^10.6.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
+  },
+  "type": "commonjs"
 }
