--- a/package.json
+++ b/package.json
@@ -7,31 +7,23 @@
     "node": "20.x"
   },
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
-    "test": "jest"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.44.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.12.0",
-    "pg-hstore": "^2.3.4",
+    "pg": "^8.7.1",
     "sequelize": "^6.37.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
-    "jest": "^29.7.0",
-    "mocha": "^10.6.0",
-    "nodemon": "^3.1.4",
-    "supertest": "^7.0.0"
-  },
-  "type": "commonjs"
+    "nodemon": "^3.1.4"
+  }
 }
