--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
-{ 
-    "version": 2, 
+{
     "builds": [
-        {
-            "src": "./index.js",
-            "use": "@now/node"
-        }
+      {
+        "src": "src/index.js",
+        "use": "@vercel/node",
+        "config": { "includeFiles": ["**/*.js", "**/*.json"] }
+      }
     ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js"
-        }
-    ]
-}
+    "routes": [{ "src": "/(.*)", "dest": "/src/index.js" }]
+  }
